Now working without errors on startup